syntax = "proto3";

import "oauth.proto";

option go_package = "sara_updated/backend/grpc/proto/photos";

// Service that exposes RPCs for insepcting and retrieving media (photos & videos)
// from various media hosting services such as Google Photos, Dropbox, and S3.
service PhotoService {
    rpc ListAlbums(AlbumListRequest) returns (AlbumsInfo);
    rpc GetAlbumMedia(GetMediaRequest) returns (MediaInfo);
}

// Request to get a list of all available albums for a given account. For platforms
// like Google Photos, it would be actual albums a user has created. For media agnostic
// services like Dropbox and AWS S3, this may be folders or directories a user has
// created specifically to hold photos and media.
message AlbumListRequest {
    GooglePhotosAlbumsRequest google_request = 1;
    OauthConfigInfo oauth_info = 2;
}

// Conforms to the REST API request to list all albums for the authenticated user.
// See https://developers.google.com/photos/library/reference/rest/v1/albums/list
message GooglePhotosAlbumsRequest {
    int32 page_size = 1;
    string page_token = 2;
}

// Gets media from a specific album for a specific photo host {i.e. google photos, dropbox, s3}
message GetMediaRequest {
    GooglePhotosMediaRequest google_request = 1;
}

// Conforms to the REST API request to list all media associated with a particular Google
// Photos album. 
// See https://developers.google.com/photos/library/reference/rest/v1/mediaItems/search
message GooglePhotosMediaRequest {
    string album_id = 1;
    int32 page_size = 2;
    string page_token = 3;
}

// Contains zero or more albums from the various supported photos platform
message AlbumsInfo {
    GooglePhotosAlbums google_photos_albums = 1;
}

// Conforms to the JSON response of the Google Photos API for listing albums
// See https://developers.google.com/photos/library/reference/rest/v1/albums/list
message GooglePhotosAlbums {
    repeated GoogleAlbumInfo albums = 1;
    string next_page_token = 2;
}

// Conforms to the JSON response of the Google Photos API for representing a single album
// and its metadata.
// See https://developers.google.com/photos/library/reference/rest/v1/albums/list
message GoogleAlbumInfo {
    string id = 1;
    string title = 2;
    string product_url = 3;
    int32 media_items_count = 4;
    string cover_photo_base_url = 5;
    string cover_photo_media_item_id = 6;
}

// Contains all media info returned from a media retrieval request
message MediaInfo {
    GooglePhotosMediaInfo google_media_info = 1;
}

// Conforms to the JSON response of Google Photos API for listing and/or retrieving
// media from the platform.
// See https://developers.google.com/photos/library/reference/rest/v1/mediaItems/search
message GooglePhotosMediaInfo {
    repeated Media media_items = 1;
    string next_page_token = 2;
}

// Conforms to the JSON response of Google Photos API for a single media item and its metadata
// See https://developers.google.com/photos/library/reference/rest/v1/mediaItems/search
message Media {
    string id = 1;
    string product_url = 2;
    string mime_type = 3;
    string description = 4;
}
